# feyod-nl2sql

./: .gitignore  LICENSE  README.md  config.py  database.py  examples.py  llm_factory.py  pyproject.toml  query_processor.py
src/workflow/: config.py  database.py  llm_factory.py  manager.py  sql_processor.py  state.py
src/workflow/utils/: entity_resolution.py  memory_utils.py
tests/: test_database.py  test_memory_utils.py  test_query_processor.py  test_sql_processor.py
utils/: memory_utils.py
